# Ambience-Gtk

./: .gitignore  ambience.gresource.xml  io.github.lukajankovic.ambience.json  meson.build  org.lukjan.ambience.json  pypi-dependencies.json  python3-lifxlan.json  python3-requirements.json  readme.md  requirements.txt
data/: io.github.lukajankovic.ambience.appdata.xml.in  io.github.lukajankovic.ambience.desktop.in  io.github.lukajankovic.ambience.gschema.xml  io.github.lukajankovic.ambience.metainfo.xml  io.github.lukajankovic.ambience.metainfo.xml.in  meson.build  org.lukjan.ambience.appdata.xml.in  org.lukjan.ambience.gschema.xml  org.lukjan.ambience.metainfo.xml.in
data/icons/: meson.build
data/ui/: ambience.gresource.xml  ambience_discovery.ui  ambience_discovery_item.ui  ambience_edit_tile.ui  ambience_flow_box.ui  ambience_group_control.ui  ambience_group_row.ui  ambience_group_tile.ui  ambience_lifx_discovery.ui  ambience_light_control.ui  ambience_light_tile.ui  ambience_tile.ui  ambience_window.ui  discovery_item.ui  light_item.ui  meson.build
po/: POTFILES  meson.build
src/: about.py  ambience.gresource.xml  ambience.in  ambience_discovery.py  ambience_group_control.py  ambience_group_tile.py  ambience_light_control.py  ambience_light_tile.py  ambience_loader.py  ambience_settings.py  ambience_window.py  discovery_item.py  helpers.py  light_item.py  main.py  meson.build  product_list.py  provider.py  row.py  sidebar.py  sidebar.ui~  singleton.py  tile.py  window.py  window.ui  window.ui~
src/backend/: ambience_loader.py  meson.build
src/lifx/: ambience_lifx_lan.py  ambience_lifx_light.py  meson.build
src/model/: ambience_device.py  ambience_group.py  ambience_light.py  ambience_module_connector.py  ambience_module_group.py  meson.build
src/providers/: ambience_providers.py.in  list_providers.sh  meson.build
src/providers/lifx/: ambience_connector.py  ambience_lifx_device_type.py  ambience_lifx_discovery.py  ambience_lifx_group.py  ambience_lifx_lan.py  ambience_lifx_light.py  meson.build
src/ui/: #ambience_window.ui#  ambience_discovery.ui  ambience_flow_box.ui  ambience_group_control.py  ambience_group_control.ui  ambience_group_tile.py  ambience_light_control.py  ambience_light_control.ui  ambience_light_tile.py  ambience_light_tile.ui  ambience_tile.ui  ambience_window.ui  ambience_window.ui~  discovery_item.ui  discovery_item.ui~  light_item.ui  light_item.ui~  row.ui  sidebar.ui  stylesheet.css  tile.ui  window.ui
src/views/: ambience_group_control.py  ambience_light_control.py  meson.build
src/widgets/: ambience_discovery_item.py  ambience_edit_tile.py  ambience_flow_box.py  ambience_group_row.py  ambience_group_tile.py  ambience_light_tile.py  ambience_tile.py  meson.build
